--- a/Railway_web_1.0/StyleSheet1.css
+++ b/Railway_web_1.0/StyleSheet1.css
@@ -14,6 +14,11 @@
     border-radius: 20px;
 }
 
+.lbl {
+    border: 2px rgb(220, 224, 232);
+    border-radius: 20px;
+}
+
 .button 
 {
     position:center;
@@ -25,6 +30,19 @@
     outline: none;
 }
 
+.button_date {
+    position: relative;
+    display: block;
+    -webkit-transition-duration: 0.8s;
+    transition-duration: 0.8s;
+    padding: 10px;
+    border: 2px solid red;
+    border-radius: 20px;
+    outline: none;
+    top: 1px;
+    left: 164px;
+}
+
 .button:hover 
 {
     background-color: rgb(216, 1, 0); /* red */
@@ -32,6 +50,14 @@
     padding: 10px;
     outline: none;
 }
+
+.button_date:hover {
+    background-color: rgb(216, 1, 0); /* red */
+    color: white;
+    padding: 10px;
+    outline: none;
+}
+
 
 .textbox_1 {
     width: 200px;
@@ -69,17 +95,22 @@ html {
 
 .container {
     overflow: hidden;
-    width: 1266px
+    width: 1259px;
+    height: 252px;
 }
 
 .box {
     white-space: nowrap;
-    width: 1266px;
+    width: 1564px;
+    height: 256px;
 }
 
 .box div {
-    height: 250px;
-        width: 422px;
-        display: inline-block;
-        border: 1px solid black
+    height: 122px;
+    width: 401px;
+    display: inline-block;
+}
+
+.main_but {
+    display: inherit;
 }
